# rgit

./: Cargo.toml  README.md
src/: cli.rs  config.rs  core.rs  error.rs  interactive.rs  main.rs  status.rs  submodule.rs  utils.rs
src/commands/: add.rs  branch.rs  clone.rs  commit.rs  doctor.rs  fetch.rs  init.rs  learn.rs  mod.rs  pull.rs  push.rs  quick_commit.rs  status.rs  submodule.rs  sync.rs
src/templates/: default.gitignore  node.gitignore  python.gitignore  rust.gitignore
